--- a/.github/workflows/master_deploysgt.yml
+++ b/.github/workflows/master_deploysgt.yml
@@ -25,13 +25,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/sgt
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/deploysgt
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/sgt
+          path: ${{env.DOTNET_ROOT}}/deploysgt
 
   deploy:
     runs-on: windows-latest
